Interatividade do modo claro e escuro corrigidos, deixando o site em portugues e quase colocando o primeiro conteudo.

--- a/src/components/Background/background.module.css
+++ b/src/components/Background/background.module.css
@@ -29,7 +29,7 @@
 .backgroundContainer {
     height: 50vh;
     overflow: hidden;
-    animation: animate 4s linear infinite;
+    animation: animate 5s linear infinite;
 }
 
 /* Para alterar o tamanho do hexagono basta alterar a margem depois alterar o .hexagono */
@@ -50,11 +50,11 @@
     background: #111;
     margin: 0.115rem;
     clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-    transition: 1000ms;
+    transition: 100ms;
 }
 
 .hexagon:hover {
-    transition: 100ms;
+    transition: 50ms;
     background: #0f0;
 }
 
@@ -71,6 +71,47 @@
 }
 
 .hexagon:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 3.125rem;
+    height: 3.90rem;
+    pointer-events: none;
+    background: rgba(255, 255, 255, 0.02);
+    z-index: 2;
+}
+
+/*LIGHT THEME*/
+
+[data-theme="light"] .hexagon {
+    position: relative;
+    width: 3.30rem;
+    height: 3.90rem;
+    background: #f5dbdb;
+    margin: 0.115rem;
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    transition: 1000ms;
+}
+
+[data-theme="light"] .hexagon:hover {
+    transition: 100ms;
+    background: #0f0;
+}
+
+[data-theme="light"] .hexagon:after {
+    content: '';
+    position: absolute;
+    top: 0.25rem;
+    bottom: 0.25rem;
+    left: 0.25rem;
+    right: 0.25rem;
+    background: #f5dbdb;
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    z-index: 1;
+}
+
+[data-theme="light"] .hexagon:before {
     content: '';
     position: absolute;
     top: 0;
