--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,13 +1,9 @@
-/**
- * CSS files with the .module.css suffix will be treated as CSS modules
- * and scoped locally.
- */
-
 .heroBanner {
   padding: 0;
   text-align: center;
   position: relative;
   overflow: hidden;
+  height: 30vh;
 }
 
 .buttons {
