--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -1,13 +1,30 @@
-.featureSvg {
-  height: 500px;
-  width: 100%;
+.modContainer {
+  margin-right: 2rem;
+  margin-left: 2rem;
+  @media (max-width: 768px) {
+    margin-right: 1rem;
+    margin-left: 1rem;
+  }
 }
 
-.resumo {
-  padding-top: 20px;
+.resume {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  width: 100%;
+  padding-top: 20px;
+  @media (max-width: 768px) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.title {
+  @media (max-width: 768px) {
+    font-size: small;
+  }
+}
+
+.description {
+  @media (max-width: 768px) {
+    font-size: small;
+  }
 }
